# ffw-sh5-teleoperation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/: scene.xml
assets/shaders/: phong.frag  phong.vert  shadow.frag  shadow.vert
assets/soda_can_stl/: soda_can.stl
scripts/: install_deps.sh
src/: main.cpp
src/input/: InputManager.cpp  InputManager.hpp
src/io/: MJCFParser.cpp  MJCFParser.hpp  PNGLoader.cpp  PNGLoader.hpp  STLLoader.cpp  STLLoader.hpp  SceneLoader.cpp  SceneLoader.hpp
src/math/: Mat4.hpp  Math.hpp  Quaternion.hpp  Transform.hpp  Vec3.hpp  Vec4.hpp
src/physics/: ArticulatedRobot.cpp  ArticulatedRobot.hpp  CollisionGroups.hpp  HandPhysics.cpp  HandPhysics.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  RobotCollider.cpp  RobotCollider.hpp
src/render/: Camera.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/robot/: ForwardKinematics.hpp  InverseKinematics.hpp  Joint.hpp  JointDynamics.hpp  RobotModel.hpp  SceneNode.hpp
src/ui/: HandPanel.cpp  HandPanel.hpp  JointPanel.cpp  JointPanel.hpp
